<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sgback1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/lab_year"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/gl_year"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/y_hint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/lab_month"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/gl_month"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/m_hint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/lab_day"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/gl_day"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/d_hint"
            android:inputType="textPersonName" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trans_hint"
        android:text="@string/trans_hint"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/nl_year"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/nl_year"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/nl_month"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/nl_month"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/nl_day"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/nl_day"
            android:inputType="textPersonName" />
    </LinearLayout>

    <Button
        android:id="@+id/trans"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_marginLeft="170dp"
        android:layout_marginRight="170dp"
        android:background="@drawable/bagua1"
        android:text="@string/but_summit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shengxiao"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/shengxiao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/shengxiao_hint"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lab_clock"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/gl_clock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/c_hint"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/animal"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

            <TextView
                android:id="@+id/trans_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>